--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,11 @@
+/* GLOBAL CSS */
 :root {
 	--almost_black: #151515;
 	--white: #fff;
 	--dark_Grey: #444;
 	--gold: #d5966c;
 }
+
 * {
 	margin: 0;
 	padding: 0;
@@ -20,12 +22,15 @@
 	width: 30vw;
 	background-color: var(--almost_black);
 }
+
 .hero_bg_mobile {
 	display: none;
 }
+
 .hero_bg_desktop {
 	width: 40vw;
 }
+
 .hero_title_section {
 	display: flex;
 	gap: 23vw;
@@ -33,49 +38,30 @@
 	top: 26vh;
 	left: 12.5vw;
 }
+
 .headline_box {
 	width: 30vw;
 }
+
 .hero_description_box {
 	width: 25vw;
-}
-.heading_primary {
-	color: black, var(--white, #fff);
-	font-family: "Big Shoulders Display", sans-serif;
-	font-size: 6vw;
-	font-weight: 900;
-}
-.para {
-	color: var(--dark_Grey, #444);
-	font-family: "Outfit", sans-serif;
-	font-size: 20px;
-	font-weight: 300;
-	margin-bottom: 6vh;
-	line-height: 1.4;
 }
 
 .btn_box {
 	display: flex;
 	align-items: center;
-}
-.btn {
-	border: none;
-	outline: none;
 	cursor: pointer;
-	padding: 1.8vw 2.5vw;
-	color: var(--White, #fff);
-	background-color: var(--almost_black);
-	font-family: "Big Shoulders Display", sans-serif;
-	font-size: 1.5vw;
-	font-weight: 800;
-	letter-spacing: 0.25725vw;
 }
+
 .btn_logo {
-	width: 4.17vw;
+	width: 4.18vw;
+}
+
+.btn_logo_black {
+	display: none;
 }
 
 /* GALLERY SECTION */
-
 .gallery_grid_box {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
@@ -83,24 +69,28 @@
 	gap: 2vw;
 	margin: 8vw 0;
 }
+
 .gallery_description_1 {
 	grid-column: 1/3;
 	grid-row: 1/2;
 	color: var(--almost_black, #151515);
 }
+
 .gallery_img {
 	grid-column: 3/-1;
 	width: 49.5vw;
 	height: 25rem;
 	background-image: url(../images/art_gallery_desktop.png);
 }
+
 .table_img {
 	grid-column: 1/4;
 	grid-row: 2/4;
 	width: 49.5vw;
-	height: 45rem;
+	height: 100vh;
 	background-image: url(../images/table_desktop.png);
 }
+
 .porch_img {
 	grid-column: 4/-1;
 	width: 32vw;
@@ -108,6 +98,7 @@
 	align-self: self-start;
 	background-image: url(../images/porch_desktop.png);
 }
+
 .gallery_description_2 {
 	grid-column: 4/-1;
 	color: var(--white) !important;
@@ -115,89 +106,129 @@
 	padding: 8vh 4vw 0 4vw;
 }
 
-.gallery_para {
-	width: 22vw !important;
-	margin-top: 3vh;
-}
 /* FOOTER SECTION */
 .footer_section {
 	background-color: var(--almost_black);
 }
+
 .footer_box {
 	padding: 8vh 0 2vh 0;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 }
+
+.footer_logo {
+	width: 15%;
+}
+
 .footer_para {
 	width: 36vw;
 }
+
+.media_box {
+	color: var(--white);
+}
+
+.fa_logo {
+	font-size: 24px;
+	margin-left: 1.5vw;
+}
+
+.fa_logo:hover {
+	color: var(--gold);
+}
+
 /* MEDIA QUERY */
 @media (max-width: 1024px) {
 	.hero_title_section {
 		top: 150px;
 	}
+
 	.para {
 		font-size: 18px;
 		line-height: 1.3;
 	}
+
+	.table_img {
+		height: 108vh;
+	}
 }
 
 @media (max-width: 768px) {
+	/* HERO SECTION @768px */
 	.hero_black_box {
 		display: none;
 	}
+
 	.hero_bg_desktop {
 		width: 55vw;
 	}
+
 	.hero_title_section {
 		flex-direction: column;
 		gap: 6vh;
 		top: 26vh;
 		left: 48vw;
 	}
+
+	.heading_primary {
+		mix-blend-mode: normal;
+		color: var(--almost_black);
+	}
+
 	.para {
 		font-size: 16px;
 		line-height: 1.3;
 		width: 36vw;
 	}
+
 	/* GALLERY SECTION @768px */
 	.table_img {
+		height: 98vh;
 		background-image: url(../images/table_tablet.png);
 	}
+
 	.porch_img {
 		background-image: url(../images/porch_tablet.png);
 	}
+
 	.gallery_description_2 {
 		padding: 8vh 2vw 0 2vw;
 	}
+
 	.gallery_para {
 		width: 28vw !important;
 	}
 }
 
 @media (max-width: 425px) {
+	/* HERO SECTION @425px */
 	.hero_bg_desktop {
 		display: none;
 	}
+
 	.hero_container {
 		width: 100vw;
-		/* height: 50vh; */
 	}
+
 	.hero_bg_mobile {
 		display: block;
 		width: 100vw;
 	}
+
 	.hero_title_section {
 		flex-direction: column;
 		gap: 6vh;
 		position: unset;
 		margin: 7vh 5vw;
 	}
+
 	.headline_box,
 	.hero_description_box {
 		width: 100%;
 	}
+
 	.heading_primary {
 		font-size: 15vw;
 	}
@@ -209,46 +240,55 @@
 	}
 
 	.btn {
-		padding: 5.6vw 7vw;
+		padding: 6.2vw 7vw;
 		font-family: "Big Shoulders Display", sans-serif;
 		font-size: 5vw;
 		font-weight: 800;
 		letter-spacing: 0.9vw;
 	}
+
 	.btn_logo {
 		width: 13.5vw;
 	}
+
 	/* GALLERY SECTION @425px */
 	.container {
 		width: 90vw;
 	}
+
 	.heading_secondary {
 		font-size: 11vw;
 		width: 70%;
 	}
+
 	.gallery_grid_box {
 		display: block;
 		margin: 22vw 0;
 	}
+
 	.gallery_img {
 		width: 100%;
 		height: 20rem;
 		background-image: url(../images/art_gallery_mobile.jpg);
 	}
+
 	.gallery_description_1 {
 		margin: 5vw 0;
 	}
+
 	.table_img {
 		width: 100%;
 		height: 30rem;
 		background-image: url(../images/table_mobile.png);
 	}
+
 	.porch_img {
 		width: 100%;
 		height: 12.5rem;
 		background-image: url(../images/porch_mobile.png);
 		margin: 5vw 0;
 	}
+
 	.gallery_description_2 {
 		padding: 8vh 7vw 2vh 7vw;
 	}
@@ -257,20 +297,24 @@
 		width: 100% !important;
 		margin-top: 3vh;
 	}
+
 	/* FOOTER SECTION @425PX */
-	.footer_section {
-		background-color: var(--almost_black);
-	}
 	.footer_box {
 		flex-direction: column;
 		align-items: flex-start;
 		padding: 8vh 0 8vh 0;
 	}
+
 	.footer_para {
 		width: 100%;
 	}
+
 	.footer_logo {
 		margin-bottom: 6vh;
 		width: 38%;
+	}
+
+	.fa_logo {
+		margin: 0 4vw 0 0;
 	}
 }
