--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,6 +182,10 @@
     margin-bottom: 3vh;
   }
 
+  .table_img {
+    background-image: url(../images/table_mobile.png);
+  }
+
   .porch_img {
     background-image: url(../images/porch_tablet.png);
   }
